--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "11210:11210"           # Data (KV)
     volumes:
       - cb_data:/opt/couchbase/var
+      - ./init-couchbase.sh:/init-couchbase.sh
+    entrypoint: ["/bin/bash", "-c", "/init-couchbase.sh & /entrypoint.sh couchbase-server"]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8091/ui/index.html"]
       interval: 10s
@@ -19,12 +21,13 @@ services:
     image: couchbase/sync-gateway:latest
     container_name: sync-gateway
     depends_on:
-      - couchbase
+      couchbase:
+        condition: service_healthy
     ports:
       - "4984:4984"   # Public API (ws:// / wss://)
       - "4985:4985"   # Admin API (local only in dev)
     volumes:
-      - ./sync-gateway-config.json:/etc/sync_gateway/config.json:ro
+      - ./sync-gateway-config.json:/etc/sync_gateway/config.json
     command: ["/etc/sync_gateway/config.json"]
 
 volumes:
