feat: Enhance Couchbase configuration and update checklist functionality

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@
 PUBLIC_CONNECTION_URL=
 USER_NAME=your_username
 USER_PASSWORD=your_password
+
+# Alternar rapidamente entre collections durante os testes
+# Valores possíveis no seu setup: checklist_items ou testes
+COLLECTION_NAME=checklist_items
+CHANNEL=checklist_items
