--- a/docker/sync-gateway-config.json
+++ b/docker/sync-gateway-config.json
@@ -1,23 +1,15 @@
 {
-  "disable_persistent_config": true,
-  "use_tls_server": false,
-  "interface": ":4984",
-  "adminInterface": ":4985",
-  "log": ["*"],
-  "databases": {
-    "checklist_db": {
-      "server": "http://couchbase:8091",
-      "username": "Administrator",
-      "password": "password",
-      "bucket": "checklist_db",
-      "num_index_replicas": 0,
-      "users": {
-        "your_username": {
-          "password": "your_password",
-          "admin_channels": ["checklist_items"]
-        }
-      },
-      "sync": "function (doc, oldDoc) { channel(['checklist_items']); }"
-    }
+  "bootstrap": {
+    "server": "couchbase://couchbase",
+    "username": "Administrator",
+    "password": "password",
+    "use_tls_server": false
+  },
+  "api": {
+    "public_interface": ":4984",
+    "admin_interface": ":4985"
+  },
+  "logging": {
+    "console": { "enabled": true, "log_level": "info" }
   }
 }
