feat: Update environment configuration, enhance debugging scripts, and improve documentation for Couchbase setup

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Copie este arquivo para .env e ajuste os valores
-# Para Android com adb reverse (USB): PUBLIC_CONNECTION_URL=ws://localhost:4984/checklist_db
-# Para dispositivo na mesma rede Wi‑Fi: PUBLIC_CONNECTION_URL=ws://SEU_IP_LOCAL:4984/checklist_db
+# Para Android com adb reverse (USB): PUBLIC_CONNECTION_URL=ws://localhost:4984/checklist_collections
+# Para dispositivo na mesma rede Wi‑Fi: PUBLIC_CONNECTION_URL=ws://SEU_IP_LOCAL:4984/checklist_collections
 
 PUBLIC_CONNECTION_URL=
 USER_NAME=your_username
 USER_PASSWORD=your_password
 
-# Alternar rapidamente entre collections durante os testes
-# Valores possíveis no seu setup: checklist_items ou testes
+# Configuração de collections e channels
+SCOPE_NAME=_default
 COLLECTION_NAME=checklist_items
 CHANNEL=checklist_items
