feat: Implement logging functionality with Logger, LogService, and LogRepository

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ USER_PASSWORD=your_password
 SCOPE_NAME=_default
 COLLECTION_NAME=checklist_items
 CHANNEL=checklist_items
+LOG_COLLECTION=app_logs
