refactor: move Couchbase Lite logging config to centralized file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cbl_flutter_ce: ^3.2.1
   connectivity_plus: ^6.1.0
   flutter_dotenv: ^5.2.1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
