--- a/docker/sync-gateway-config.json
+++ b/docker/sync-gateway-config.json
@@ -10,6 +10,10 @@
     "admin_interface": ":4985"
   },
   "logging": {
-    "console": { "enabled": true, "log_level": "info" }
+    "console": {
+      "enabled": true,
+      "log_level": "info",
+      "log_keys": ["HTTP", "CRUD", "Sync", "Changes", "Auth"]
+    }
   }
 }
