--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  intl: ^0.19.0
+  intl: ^0.20.2
   google_fonts: ^6.2.1
-  bloc: ^8.1.4
-  flutter_bloc: ^8.1.6
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
   provider: ^6.1.2
-  cbl: ^3.2.1
-  cbl_flutter: ^3.1.3
-  cbl_flutter_ce: ^3.2.1
-  connectivity_plus: ^6.1.0
-  flutter_dotenv: ^5.2.1
+  # Couchbase Lite sem Vector Search (CE)
+  # Pin para 3.5.x para evitar preload da lib de Vector Search no Android
+  # Importante: travar menor que 3.6.0 para evitar preload da lib Vector Search
+  cbl: ">=3.5.0 <3.6.0"
+  cbl_flutter: 3.3.2
+  cbl_flutter_ce: ^3.4.0
+  
+  connectivity_plus: ^7.0.0
+  flutter_dotenv: ^6.0.0
   path_provider: ^2.1.4
 
 dev_dependencies:
@@ -55,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
