feat: enhance ChecklistRepository with user-specific item fetching and UUID handling; add UuidHelper and corresponding tests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   connectivity_plus: ^7.0.0
   flutter_dotenv: ^6.0.0
   path_provider: ^2.1.4
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
