feat: enhance environment configuration and health check scripts; add replication configuration validation and user management scripts

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 # Copie este arquivo para .env e ajuste os valores
-# Para Android com adb reverse (USB): PUBLIC_CONNECTION_URL=ws://localhost:4984/checklist_collections
-# Para dispositivo na mesma rede Wi‑Fi: PUBLIC_CONNECTION_URL=ws://SEU_IP_LOCAL:4984/checklist_collections
+# Para Android com adb reverse (USB): PUBLIC_CONNECTION_URL=ws://localhost:4984/checklist_db
+# Para dispositivo na mesma rede Wi‑Fi: PUBLIC_CONNECTION_URL=ws://SEU_IP_LOCAL:4984/checklist_db
 
-PUBLIC_CONNECTION_URL=
+# Endpoint público do Sync Gateway (use ws://)
+PUBLIC_CONNECTION_URL=ws://localhost:4984/checklist_db
+
+# Credenciais do usuário de replicação (deve existir no Sync Gateway)
+# Crie/atualize este usuário via: scripts/ensure-sg-user-from-env.sh
 USER_NAME=your_username
 USER_PASSWORD=your_password
 
-# Configuração de collections e channels
+# Configuração de scopes/collections e channels
 SCOPE_NAME=_default
 COLLECTION_NAME=checklist_items
 CHANNEL=checklist_items
+
+# Coleção e canal de usuários (se usados)
+USER_COLLECTION_NAME=users
+USER_CHANNEL=users
